--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,19 @@
+<% text_analyzer = TextAnalyzer.new(@text_from_user) %>
+
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>
+  Number of Words:<%= text_analyzer.count_of_words %>
+</h2>
 
-<h2>Vowels:</h2>
+<h2>
+  Vowels:<%= text_analyzer.count_of_vowels %>
+</h2>
 
-<h2>Consonants:</h2>
+<h2>
+  Consonants:<%= text_analyzer.count_of_consonants%>
+</h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>
+  Most Common Letter: <%= text_analyzer.most_used_letter[:most_used_letter].upcase %>, used <%= text_analyzer.most_used_letter[:letter_count] %> times
+</h2>
