--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,9 @@
+
 <h1>Word Counter</h1>
 
 <form method="post" action="/">
   <p>Input the text you want analyzed here:</p>
   <textarea name="user_text"></textarea>
   <br>
-  <input type="submit">
+  <input type="submit" value="submit">
 </form>
