--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,12 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%=@ta.count_of_words%></h2>
+  
+<h2>Vowels:<%=@ta.count_of_vowels%></h2>
+  
+<h2>Consonants:<%=@ta.count_of_consonants%> </h2>
 
-<h2>Vowels:</h2>
 
-<h2>Consonants:</h2>
+<h2>Most Common Letter: <%=@ta.most_used_letter[:most_used_letter].upcase%>, used <%=@ta.most_used_letter[:letter_count]%> times</h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+
