--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:</h2><%= @text_from_user.count_of_words %>
 
-<h2>Vowels:</h2>
+<h2>Vowels:</h2><%= @text_from_user.count_of_vowels %>
 
-<h2>Consonants:</h2>
+<h2>Consonants:</h2><%= @text_from_user.count_of_consonants %>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter:<%= @text_from_user.most_used_letter.values.first.upcase %>, used <%= @text_from_user.most_used_letter.values.last %> times</h2>
