--- a/views/results.erb
+++ b/views/results.erb
@@ -1,12 +1,12 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words: <%= @user_text.count_of_words %></h2>
+<h2>Number of Words: <%= @analyzed_text.count_of_words %></h2>
 
-<h2>Vowels: <%= @user_text.count_of_vowels %></h2>
+<h2>Vowels: <%= @analyzed_text.count_of_vowels %></h2>
 
-<h2>Consonants: <%= @user_text.count_of_consonants %></h2>
+<h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: <%= @user_text.most_used_letter %> used <%= @user_text.most_used_letter.count %> times</h2>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter %> used <%= @analyzed_text.most_used_letter.count %> times</h2>
 
 <!-- <h2><%= @reversed_string %></h2>
 @analyzed_text -->
