--- a/views/results.erb
+++ b/views/results.erb
@@ -7,7 +7,7 @@
 <h2>Consonants:<%= @analyzed_text.count_of_consonants %></h2>
 <h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first.upcase %>, used <%= @analyzed_text.most_used_letter.values.first %> times</h2>
 
-
+<!-- Line above passes the Learn test; line below works in shotgun-->
 <!-- <h2>Most Common Letter:<%= @analyzed_text.most_used_letter %> used <%= @analyzed_text.most_used_letter.count %> times</h2> -->
 
 <!-- <h2><%= @reversed_string %></h2>
