--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words: <%= @textanalyzer.count_of_words %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels: <%= @textnalyzer.count_of_vowels %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants: <%= @textanalyzer.count_of_consonants %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter:___ used ___ times <%= @textanalyzer.most_used_letter %></h2>
