--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<h1>Word Counter</h1>
+
+<div class="well"><h1>Word Counter</h1></div>
 
 <form method="post" action="/">
   <p>Input the text you want analyzed here:</p>
