--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
 <h1> Your Text Analysis </h1>
-
-<h2>Number of Words:</h2>
-
-<h2>Vowels:</h2>
-
-<h2>Consonants:</h2>
-
-<h2>Most Common Letter:___ used ___ times</h2>
+<% words = @analyzed_text.count_of_words %>
+<h2>Number of Words:<%= words %></h2>
+<% vowels = @analyzed_text.count_of_vowels %>
+<h2>Vowels:<%= vowels %></h2>
+<% consonants = @analyzed_text.count_of_consonants %>
+<h2>Consonants:<%= consonants %> </h2>
+<% common = @analyzed_text.most_used_letter[0].upcase %>
+<% times = @analyzed_text.most_used_letter[1] %>
+<h2>Most Common Letter: <%= common %>, used <%= times %> times</h2>
