--- a/views/results.erb
+++ b/views/results.erb
@@ -1,8 +1,8 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Wordys: <%= @analyzed_text.count_of_words %> </h2>
 
-<h2>Vowels:</h2>
+<h2>Vowelys:</h2>
 
 <h2>Consonants:</h2>
 
