--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words: <%=count_of_words%></h2>
+<h2>Number of Words: <%=@analyzed_text.count_of_words%></h2>
 
-<h2>Vowels:<%=count_of_vowels%></h2>
+<h2>Vowels:<%=@analyzed_text.count_of_vowels%></h2>
 
-<h2>Consonants:<%=count_of_consonants%></h2>
+<h2>Consonants:<%=@analyzed_text.count_of_consonants%></h2>
 
-<h2>Most Common Letter:_<%=most_used_letter[0]%>__ used _<%=most_used_letter[1]%>__ times</h2>
+<h2>Most Common Letter:_<%=@analyzed_text.most_used_letter[0]%>__ used _<%=@analyzed_text.most_used_letter[1]%>__ times</h2>
