--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%= @analysis.word_count %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels:<%= @analysis.vowel_count %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants:<%= @analysis.consonant_count %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter: <%= @analysis.mcl.keys[0] %>, used <%= @analysis.mcl.values[0] %> times</h2>
