--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,4 @@
 
 <h2>Consonants:<%count_of_consonants%></h2>
 
-<h2>Most Common Letter:<%most_used_letter.first.upcase%> used <%most_used_letter[1]%> times</h2>
+<h2>Most Common Letter:<%most_used_letter[0]%> used <%most_used_letter[1]%> times</h2>
