--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%= @analyized_text.count_of_words %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels:<%= @analyized_text.count_of_vowels %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants:<%= @analyized_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter: <%= @analyized_text.most_used_letter[0].upcase %>, used <%= @analyized_text.most_used_letter[1] %> times</h2>
