--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <form method="post" action="/">
   <p>Input the text you want analyzed here:</p>
-  <textarea name="user_text"></textarea>
+  <textarea name= user_text></textarea>
   <br>
   <button type="submit" value="submit">Submit</button>
 </form>
