--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%= @results.count_of_words %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels:<%= @results.count_of_words %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants:<%= @results.count_of_words %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter:<%= @most_user_letter[0] %> used <%= @most_user_letter[1] %> times</h2>
