--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%= @new_text.count_of_words.to_s %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels:<%= @new_text.count_of_vowels.to_s %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants:<%= @new_text.count_of_consonants.to_s %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<h2>Most Common Letter: <%= @new_text.most_used_letter[0], %> used <%= @new_text.most_used_letter[1] %> times</h2>
