--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
+<h2>Number of Words:<%= @analyzed_text.count_of_words %></h2>
 
-<h2>Vowels:</h2>
+<h2>Vowels:<%= @analyzed_text.count_of_vowels %></h2>
 
-<h2>Consonants:</h2>
+<h2>Consonants:<%= @analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter:___ used ___ times</h2>
+<% mu_letter, mul_count = @analyzed_text.most_used_letter %>
+<h2>Most Common Letter: <%= mu_letter %>, used <%= mul_count %> times</h2>
