--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
 <h1> Your Text Analysis </h1>
 
 <h2>Number of Words:</h2>
-
+<%= @anlyzed_text.count_of_words %>
 <h2>Vowels:</h2>
-
+<%= @anlyzed_text.count_of_vowels %>
 <h2>Consonants:</h2>
-
+<%= @anlyzed_text.count_of_consonants %>
 <h2>Most Common Letter:___ used ___ times</h2>
+<%= @anlyzed_text.most_used_letter %>
