--- a/views/results.erb
+++ b/views/results.erb
@@ -1,10 +1,6 @@
 <h1> Your Text Analysis </h1>
 
-<h2>Number of Words:</h2>
-<%= @anlyzed_text.count_of_words %>
-<h2>Vowels:</h2>
-<%= @anlyzed_text.count_of_vowels %>
-<h2>Consonants:</h2>
-<%= @anlyzed_text.count_of_consonants %>
-<h2>Most Common Letter:___ used ___ times</h2>
-<%= @anlyzed_text.most_used_letter %>
+<h2>Number of Words:<%= @anlyzed_text.count_of_words %></h2>
+<h2>Vowels:<%= @anlyzed_text.count_of_vowels %></h2>
+<h2>Consonants:<%= @anlyzed_text.count_of_consonants %></h2>
+<h2>Most Common Letter: <%= @anlyzed_text.most_used_letter[0]%>, used <%= @anlyzed_text.most_used_letter[1]%> times</h2>
