--- a/views/results.erb
+++ b/views/results.erb
@@ -7,4 +7,4 @@
 <h2>Consonants:<%= @analyzed_text.count_of_consonants %></h2>
 
 <!--MUST use method .uppercase to pass test, if not test fails, working method to show in browser is .upcase -->
-<h2>Most Common Letter:<%= @analyzed_text.most_used_letter.first.uppercase %> used <%= @analyzed_text.most_used_letter.last %> times</h2>
+<h2>Most Common Letter:<%= @analyzed_text.most_used_letter.first.upcase %> used <%= @analyzed_text.most_used_letter.last %> times</h2>
