--- a/views/results.erb
+++ b/views/results.erb
@@ -2,8 +2,8 @@
 
 <h2>Number of Words: <%= @analyzed_text.count_of_words %></h2>
 
-<h2>Vowels: <%= @analyzed_text.count_of_vowels %></h2>
+<h2>Vowels: <%= @analyzed_text.count_of_vowels %> </h2>
 
-<h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
-
-<h2>Most Common Letter: <%= @analyzed_text.keys.first %> used <%= @analyzed_text.values.first %> times</h2>
+<h2>Consonants: <%= @analyzed_text.count_of_consonants %> </h2>
+<% most_used = @analyzed_text.most_used_letter %>
+<h2>Most Common Letter: <%= most_used.keys.first.upcase %>, used <%= most_used.values.first %> times</h2>
