--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @text_analyzer.count_of_words %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @text_analyzer.count_of_vowels %> </h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @text_analyzer.count_of_consonants %> </h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%= @text_analyzer.most_used_letter.first[0].capitalize %>, used <%= @text_analyzer.most_used_letter.first[1] %> times</h2>
