--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @analysed_text.count_of_words %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @analysed_text.count_of_vowels %></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @analysed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%= @analysed_text.most_used_letter.keys.first.upcase %>, used <%= @analysed_text.most_used_letter.values.first %> times</h2>
