--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @count_w %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @count_v %></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @count_c %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%= @mcl.keys[0].upcase %>, used <%= @mcl[@mcl.keys[0]] %> times</h2>
