--- a/views/results.erb
+++ b/views/results.erb
@@ -6,7 +6,4 @@
 
 <h2>Consonants: <%=@analyzed_text.count_of_consonants%> </h2>
 
-<% most_used_letter = @analyzed_text.most_used_letter.keys.first%>
-<% number_of_time = @analyzed_text.most_used_letter[most_used_letter]%>
-
-<h2>Most Common Letter: <%= most_used_letter.upcase%>, used <%=number_of_time%> times</h2>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first.upcase%>, used <%=@analyzed_text.most_used_letter.values.first.upcase%> times</h2>
