--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%="#{params[:user_text].count(" ") + 1}"%></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%="#{params[:user_text].select{|letter| ["a","e","i","o","u"].any?{|i| letter == i}}}"%></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%="#{params[:user_text].select{|letter| ["a","e","i","o","u"].any?{|i| letter != i}}}"%></h2>
 
 <h2>Most Common Letter: _____ used _____ times</h2>
