--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: <%="#{params[:user_text].count(" ") + 1}"%></h2>
+<h2>Number of Words: <%="#{@analyzed_text.count_of_words}"%></h2>
 
-<h2>Vowels: <%="#{params[:user_text].select{|letter| ["a","e","i","o","u"].any?{|i| letter == i}}}"%></h2>
+<h2>Vowels: <%="#{@analyzed_text.count_of_vowels}"%></h2>
 
-<h2>Consonants: <%="#{params[:user_text].select{|letter| ["a","e","i","o","u"].any?{|i| letter != i}}}"%></h2>
+<h2>Consonants: <%="#{@analyzed_text.count_of_consonants}"%></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%="#{@analyzed_text.most_used_letter[0].upcase}"%> used <%="#{@analyzed_text.most_used_letter[1]}"%> times</h2>
