--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
-<h1>Your Text Analysis</h1>
+<h1>Your Text Analysis <%= @analyzed_text %> </h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @word_count %> </h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @vowel_count %> </h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @consonant_count %> </h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%= @most_used.keys[0].upcase %>, used <%= @most_used[@most_used.keys[0]] %> times</h2>
