--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
 <h2>Number of Words: </h2>
-
+<%= @text_analyzer.count_of_words %>
 <h2>Vowels: </h2>
-
+<%= @text_analyzer.count_of_vowels %>
 <h2>Consonants: </h2>
-
-<h2>Most Common Letter: _____ used _____ times</h2>
+<%= @text_analyzer.count_of_consonants %>
+<h2>Most Common Letter: <%= @text_analyzer.most_used_letter.keys[0].upcase %>, used <%= @text_analyzer.most_used_letter[@text_analyzer.most_used_letter.keys[0]] %> times</h2>
