--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
 <h1>Your Text Analysis</h1>
 
 <h2>Number of Words: </h2>
-
+<h3><%=@analyzed_text.count_of_words%></h3>
 <h2>Vowels: </h2>
-
+<h3><%=@analyzed_text.count_of_vowels%></h3>
 <h2>Consonants: </h2>
-
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h3><%=@analyzed_text.count_of_consonants%></h3>
+<%i = @analyzed_text.most_used_letter%>
+<h2><%=i.map {|k, v| "Most Common Letter: " "#{k}" + " used " "#{v}" + " times"}.join%></h2>
