--- a/views/results.erb
+++ b/views/results.erb
@@ -7,4 +7,4 @@
 <h2>Consonants: </h2>
 <h3><%=@analyzed_text.count_of_consonants%></h3>
 <%i = @analyzed_text.most_used_letter%>
-<h2><%=i.map {|k, v| "Most Common Letter: " "#{k}" + " used " "#{v}" + " times"}.join%></h2>
+<h2><%=i.map {|k, v| "Most Common Letter: " "#{k.upcase}," + " used " "#{v}" + " times"}.join%></h2>
