--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,12 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @analysis.count %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @analysis.vowels %></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @analysis.constants %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>
+  Most Common Letter: <%= @analysis.most_common_letter[:letter] %>,
+  used <%= @analysis.most_common_letter[:used_x_times] %> times
+</h2>
