--- a/views/results.erb
+++ b/views/results.erb
@@ -7,6 +7,6 @@
 <h2>Consonants: <%= @analysis.constants %></h2>
 
 <h2>
-  Most Common Letter: <%= @analysis.most_common_letter[:letter] %>,
-  used <%= @analysis.most_common_letter[:used_x_times] %> times
+  Most Common Letter: <%= @analysis.most_used_letter[:letter] %>,
+  used <%= @analysis.most_used_letter[:used] %> times
 </h2>
