--- a/views/results.erb
+++ b/views/results.erb
@@ -6,7 +6,4 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.flatten[0].upcase %>, used <%= @analyzed_text.most_used_letter.flatten[1].first %> times</h2>
-
-<%# <%= @analyzed_text.most_used_letter.keys.first.upcase %>
-<%# <%= @analyzed_text.most_used_letter.values.first %>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first.upcase %>, used <%= @analyzed_text.most_used_letter.values.first %> times</h2>
