--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= @word_count %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= @vowell_count %></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= @cons_count %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%=@max_letter%>, used <%=@letter_occurs%> times</h2>
