--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words:<%word_count=@analyzed_text.count_of_words%> <%=word_count%> </h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels:<%vowel_count=@analyzed_text.count_of_vowels%> <%=vowel_count%> </h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants:<%consonant_count=@analyzed_text.count_of_consonants%> <%=consonant_count%></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%common_letter=@analyzed_text.most_used_letter.flatten%> <%amount=@analyzed_text.most_used_letter.flatten%> <%=common_letter[0].upcase%>, used <%=amount[1]%> times</h2>
