--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,4 @@
 
 <h2>Consonants: <%= @analzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: <%= @analzed_text.most_used_letter.keys.first.uppercase %> used <%= @analzed_text.most_used_letter.values.first %> times</h2>
+<h2>Most Common Letter: <%= @analzed_text.most_used_letter.keys.first.upcase %>, used <%= @analzed_text.most_used_letter.values.first %> times</h2>
