--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words:<%= " #{@text_analyzer.count_of_words}" %></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels:<%= " #{@text_analyzer.count_of_vowels}" %></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants:<%= " #{@text_analyzer.count_of_consonants}" %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<% biggest = @text_analyzer.most_used_letter  %>
+<h2><%= "Most Common Letter: #{biggest.keys.first.upcase}, used #{biggest.values.first} times" %></h2>
