--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: 4 </h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: 5 </h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: 10 </h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: G, used 3 times</h2>
