--- a/views/results.erb
+++ b/views/results.erb
@@ -7,3 +7,6 @@
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
 <% @analyzed_text.most_used_letter.each do |key, value| %><h2>Most Common Letter: <%= key.upcase %>, used <%= value %> times</h2><% end %>
+
+<%# ALTERNATE LAST LINE
+Use @analyzed_text.most_used_letter.keys.first.upcase and @analyzed_text.most_used_letter.values.first instead %>
