--- a/views/results.erb
+++ b/views/results.erb
@@ -6,6 +6,4 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-<% @common_letter = @analyzed_text.most_used_letter %>
-
-<h2>Most Common Letter: <%= @common_letter.keys.join.upcase %>, used <%= @common_letter.values.join %> times</h2>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.join.upcase %>, used <%= @analyzed_text.most_used_letter.values.join %> times</h2>
