--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,12 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%=@analyzed_text.count_of_words%></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%=@analyzed_text.count_of_vowels%></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%=@analyzed_text.count_of_consonants%></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<%most_common_letter = @analyzed_text.most_used_letter.keys.first%>
+<%most_common_frequency = @analyzed_text.most_used_letter.values.first%>
+
+<h2>Most Common Letter: <%=most_common_letter.upcase%>, used <%=most_common_frequency%> times</h2>
