--- a/views/results.erb
+++ b/views/results.erb
@@ -5,4 +5,4 @@
 
 <h2>Consonants: <%=@analyzed_text.count_of_consonants%></h2>
 <%common_letter = @analyzed_text.most_used_letter %>
-<h2>Most Common Letter: <%=common_letter.keys.first%> used <%=common_letter.values.first%> times</h2>
+<h2>Most Common Letter: <%=common_letter.keys.first.capitalize%>, used <%=common_letter.values.first%> times</h2>
