--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,6 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: _<%= @analyzed_text.most_used_letter %> used _____ times</h2>
+<% @letter = @analyzed_text.most_used_letter.first %>
+
+<h2>Most Common Letter: <%= @letter.first.upcase %>, used <%= @letter.last %>  times</h2>
