--- a/views/results.erb
+++ b/views/results.erb
@@ -8,3 +8,4 @@
 
 <% mcl = @analyzed_text.most_used_letter %>
 <h2>Most Common Letter: <%= mcl.keys.join.upcase %>, used <%= mcl.values.join %> times</h2>
+<!-- mlc.key devuelve un array y con join lo tranformo en string-->
