--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,11 @@
 <h1>Word Counter</h1>
 
 <form method="post" action="/">
+<form method="post" action="/results">
   <p>Input the text you want analyzed here:</p>
   <textarea name="user_text"></textarea>
   <br>
-  <button type="submit" value="submit">Submit</button>
+  <input type="submit">
+</form> 
+  <input type="submit" value="submit">
 </form>
