--- a/views/results.erb
+++ b/views/results.erb
@@ -1,10 +1,18 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
-  @analyzed_text.count_of_words
-<h2>Vowels: </h2>
-  @analyzed_text.count_of_vowels
-<h2>Consonants: </h2>
-  @analyzed_text.count_of_consonants
+<h2>Number of Words: <%= @analyzed_text.count_of_words %></h2>
+  
+<h2>Vowels: <%= @analyzed_text.count_of_vowels %></h2>
+  
+<h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
+
+#  <% most_common_letter = 
+# <h2>Most Common Letter: <%= @analyzed_text.most_used_letter %> used <%= @analyzed_text.most_used_letter %> times</h2>
+ 
 <h2>Most Common Letter: _____ used _____ times</h2>
-  @analyzed_text.most_used_letter
+
+
+
+# <% new_user_text = t('session.new_user') %>
+# <% link = link_to t('session.signup_now'), signup_path %>
+# <p><%= new_user_text %><%= link %></p>
