--- a/views/results.erb
+++ b/views/results.erb
@@ -6,13 +6,7 @@
   
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-#  <% most_common_letter = 
-# <h2>Most Common Letter: <%= @analyzed_text.most_used_letter %> used <%= @analyzed_text.most_used_letter %> times</h2>
- 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys[0] -%>, 
+used <%= @analyzed_text.most_used_letter[key] -%> times</h2>
 
 
-
-# <% new_user_text = t('session.new_user') %>
-# <% link = link_to t('session.signup_now'), signup_path %>
-# <p><%= new_user_text %><%= link %></p>
