--- a/views/results.erb
+++ b/views/results.erb
@@ -6,7 +6,8 @@
   
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys[0] -%>, 
-used <%= @analyzed_text.most_used_letter[key] -%> times</h2>
 
+<% key = @analyzed_text.most_used_letter.keys[0] %>
+<% value = @analyzed_text.most_used_letter[key] %>
 
+<h2>Most Common Letter: <%= key %>, used <%= value %> times</h2>
